<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.SmartParking.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- node 1 内层的垂直布局 -->
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 三个文本栏的布局设置 -->

            <TextView
                android:id="@+id/node_title1"
                android:layout_width="80dp"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/carStatus1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="#ff000000"
                android:textSize="25sp" />


        </LinearLayout>
        <!-- 图片布局设置 -->

        <ImageView
            android:id="@+id/image_car1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/desc1" />



    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <!-- node 2 内层的垂直布局 -->
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 三个文本栏的布局设置 -->

            <TextView
                android:id="@+id/node_title2"
                android:layout_width="80dp"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/carStatus2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="#FF000000"
                android:textSize="25sp" />


        </LinearLayout>
        <!-- 图片布局设置 -->

        <ImageView
            android:id="@+id/image_car2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/desc3" />


    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <!-- node 3 内层的垂直布局 -->
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <!-- 三个文本栏的布局设置 -->

            <TextView
                android:id="@+id/node_title3"
                android:layout_width="80dp"
                android:layout_height="35dp" />

            <TextView
            android:id="@+id/carStatus3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="#FF000000"
            android:textSize="25sp" />


        </LinearLayout>
        <!-- 图片布局设置 -->

        <ImageView
            android:id="@+id/image_car3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/desc5" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <!-- node 4 内层的垂直布局 -->
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 三个文本栏的布局设置 -->

            <TextView
                android:id="@+id/node_title4"
                android:layout_width="80dp"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/carStatus4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="#FF000000"
                android:textSize="25sp" />


        </LinearLayout>
        <!-- 图片布局设置 -->

        <ImageView
            android:id="@+id/image_car4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/desc7" />


    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider" />



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Tips"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical|left"
            android:textColor="#FF000000"
            android:textSize="20sp" />
    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
